# idfnode

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build_all_devices.sh  esp_idf_project_configuration.json  fullclean.sh  monitor.py  ota.py  sdkconfig.defaults  sdkconfig.defaults.dev
devices/atom/: device_handlers.c  partition_table.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.inet  sdkconfig.defaults.mesh  sdkconfig.defaults.obr
devices/atom_mesh/: device_handlers.c  sdkconfig.defaults
devices/c3_cikonesp/: device_handlers.c  sdkconfig.defaults  sdkconfig.defaults.inet
devices/c3_cikonesp_mesh/: device_handlers.c  sdkconfig.defaults
devices/c6dev/: sdkconfig.defaults  sdkconfig.defaults.ftd
devices/cikonesp/: device_handlers.c  sdkconfig.defaults  sdkconfig.defaults.inet  sdkconfig.defaults.mesh
devices/cikonesp_mesh/: device_handlers.c  sdkconfig.defaults
devices/h2dev/: partition_table.csv  sdkconfig.defaults  sdkconfig.defaults.ftd  sdkconfig.defaults.sed
devices/p4dev/: partition_table.csv  sdkconfig.defaults  sdkconfig.defaults.eth
home_assistant/dashboards/: esp_diagnostic.yaml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
modules/config/: config_fields_private.h.example  config_manager.c  config_manager.h
modules/core/: platform_services.c  platform_services.h  system_commands.c  system_commands.h
modules/https/: https_server.c  https_server.h
modules/monitor/: tcp_monitor.c  tcp_monitor.h  udp_monitor.c  udp_monitor.h
modules/mqtt/: ha.c  ha.h  mqtt.c  mqtt.h
modules/ota/: ota.c  ota.h
modules/rf433_receiver/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  rf433_receiver.c
modules/rf433_receiver/include/: rf433_receiver.h
modules/supervisor/: cmnd.c  cmnd.h  cmnd_basic_handlers.c  cmnd_basic_handlers.h  cmnd_core_handlers.c  cmnd_core_handlers.h  cmnd_handlers.c  cmnd_handlers.h  supervisor.c  supervisor.h  tele.c  tele_basic_appenders.c  tele_basic_appenders.h  tele_core_appenders.c
modules/supervisor/adapters/: cmnd_inet_handlers.c  inet.c  inet.h  inet_cmnd_handlers.c  inet_cmnd_handlers.h  zigbee.c
modules/supervisor/adapters/inet/: cmnd_inet_handlers.c  cmnd_inet_handlers.h  inet.c
modules/supervisor/adapters/rf433/: rf433.c
modules/supervisor/adapters/zigbee/: zigbee.c
modules/supervisor/core/: supervisor.c  tele.c  tele_core_appenders.c  tele_core_appenders.h
modules/supervisor/include/: supervisor.h  tele.h
modules/supervisor/include/adapters/: inet.h  rf433.h  zigbee.h
modules/utils/: button_manager.c  button_manager.h  config.c  config.h  config_manager.c  config_manager.h  debug.c  debug.h  helpers.c  helpers.h  json_parser.c  json_parser.h  macros.h  net.c  net.h  task_helpers.c  task_helpers.h  udp_monitor.c  udp_monitor.h
modules/wifi/: wifi.c  wifi.h
partition_table/: partition_table.csv
