idf_component_register(
    SRCS
        "../modules/utils/debug.c"
        "../modules/utils/button_manager.c"
        "../modules/utils/net.c"
        "main.c"
        "../modules/supervisor/core/supervisor.c"
        "../modules/supervisor/core/cmnd.c"
        "../modules/supervisor/core/cmnd_core_handlers.c"
        "../modules/supervisor/core/tele.c"
        "../modules/supervisor/core/tele_core_appenders.c"
        "../modules/supervisor/adapters/inet/inet.c"
        "../modules/supervisor/adapters/inet/cmnd_inet_handlers.c"
        "../modules/supervisor/adapters/zigbee/zigbee.c"
    PRIV_REQUIRES
        esp_wifi
        cjson
        button
        spi_flash
        cikon_config
        cikon_core
        cikon_https
        cikon_mqtt
        cikon_tcp_ota
        cikon_tcp_monitor
        cikon_wifi
    INCLUDE_DIRS
        "../modules/utils"
        "../modules/supervisor/include"
    PRIV_INCLUDE_DIRS
        "../modules/supervisor/adapters/inet"
        "../modules/supervisor/adapters/zigbee"
        "../modules/supervisor/core"
)
